--- a/ex_08_Site-Clone_LetrasCom/index.html
+++ b/ex_08_Site-Clone_LetrasCom/index.html
@@ -2,6 +2,7 @@
 <html lang = "pt-br">
 <head>
 	<!-- Renderiza caracteres especiais corretamente -->
+	 <!-- Clonar o Site Letras.com -->
 	<meta charset="UTF-8">
 
 	<!-- Reconhece quando aberto em tela menor -->
