--- a/ex_08_Site-Clone_LetrasCom/index.html
+++ b/ex_08_Site-Clone_LetrasCom/index.html
@@ -29,7 +29,7 @@
 
 	<p style="font-size:20px; margin-left:190px;">
 		They told him: Don't you ever come around here <br>
-		<img src="IMG/video.png" alt="video" height="250" align="right">
+		<a href="https://www.youtube.com/watch?v=oRdxUFDoQe0" target="_blank"><img src="IMG/video.png" alt="video" height="250" align="right"></a>
 		Don't wanna see your face, you better disappear <br>
 		The fire's in their eyes <br>
 		And their words are really clear <br>
