--- a/ex_07_Site-Clone_LetrasCom/index.html
+++ b/ex_07_Site-Clone_LetrasCom/index.html
@@ -17,10 +17,10 @@
 	<p style="color: lightgray; font-size:12px ;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;página inicial  >>  pop  >>  michael jackson  >>  beat it</p>
 
 	<center>
-		<img src="IMG/anuncio.png" alt="anuncio do mal :O" height="90" align="center">
+		<a href="https://visitbue.com" target="_blank"><img src="IMG/anuncio.png" alt="anuncio do mal :O" height="90" align="center"></a>
 	</center>
 
-	<p style="color: #ed4800; font-size:25px; line-height:-10px;">
+	<p style="color: #ed4800; font-size:25px; line-height:-10px; position: relative; top:-20px; ">
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<img src="IMG/michael.png" alt="Michael Jackson">
 	<b>Beat It</b>
