--- a/ex_07_Site-Clone_LetrasCom/index.html
+++ b/ex_07_Site-Clone_LetrasCom/index.html
@@ -16,20 +16,20 @@
 
 	<p style="color: lightgray; font-size:12px ;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;página inicial  >>  pop  >>  michael jackson  >>  beat it</p>
 
-	<center>
 		<a href="https://visitbue.com" target="_blank"><img src="IMG/anuncio.png" alt="anuncio do mal :O" height="90" align="center"></a>
-	</center>
 
 	<p style="color: #ed4800; font-size:25px; line-height:-10px; position: relative; top:-20px; ">
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<img src="IMG/michael.png" alt="Michael Jackson">
-	<b>Beat It</b>
-	<p style="color: #c2c800; font-size:25px; line-height:-10px; margin-left:190px ;"> Michael Jackson </p>
+	<img src="IMG/michael.png" alt="Michael Jackson" style="float: left ; margin-right: 10px;">
+	<b>Beat It</b><br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<span style="color: #c2c800; font-size:25px; line-height:-10px;"> Michael Jackson </span>
 	</p>
+
+    <p style="float: right;"><video width="420" height="236.25" controls><source src="IMG/jackson.mp4" type="video/mp4"></video></p>
 
 	<p style="font-size:20px; margin-left:190px;">
 		They told him: Don't you ever come around here <br>
-		<a href="https://www.youtube.com/watch?v=oRdxUFDoQe0" target="_blank"><img src="IMG/video.png" alt="video" height="250" align="right"></a>
 		Don't wanna see your face, you better disappear <br>
 		The fire's in their eyes <br>
 		And their words are really clear <br>
