--- a/ex_07_Site-Clone_LetrasCom/index.html
+++ b/ex_07_Site-Clone_LetrasCom/index.html
@@ -18,12 +18,12 @@
 
 		<a href="https://visitbue.com" target="_blank"><img src="IMG/anuncio.png" alt="anuncio do mal :O" height="90" align="center"></a>
 
-	<p style="color: #ed4800; font-size:25px; line-height:-10px; position: relative; top:-20px; ">
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<img src="IMG/michael.png" alt="Michael Jackson" style="float: left ; margin-right: 10px;">
+	<p style="color: #ed4800; font-size:25px; line-height:-10px; position: relative; top:-20px; margin-left:115px;">
+	<img src="IMG/michael.png" alt="Michael Jackson" style="float: left ; margin-right: 15px; width="56" height="56">
+
 	<b>Beat It</b><br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<span style="color: #c2c800; font-size:25px; line-height:-10px;"> Michael Jackson </span>
+
+	<span style="color: #c2c800; font-size:25px; line-height:-10px; margin-left:40x;"> Michael Jackson </span>
 	</p>
 
     <p style="float: right;"><video width="420" height="236.25" controls><source src="IMG/jackson.mp4" type="video/mp4"></video></p>
@@ -60,6 +60,62 @@
 		Don't wanna be a boy, you wanna be a man <br>
 		You wanna stay alive? Better do what you can <br>
 		So beat it, just beat it (oh) <br>
+	</p>
+
+	<p style="font-size:20px; margin-left:190px;">
+		You have to show them that you're really not scared <br>
+		You're playin' with your life <br>
+		This ain't no truth or dare (oh) <br>
+		They'll kick you, then they'll beat you <br>
+		Then they'll tell you: It's fair <br>
+		So beat it, but you wanna be bad <br>
+	</p>
+
+	<p style="font-size:20px; margin-left:190px;">
+		Just beat it (beat it), beat it (beat it) <br>
+		No one wants to be defeated <br>
+		Showin' how funky and strong is your fight <br>
+		It doesn't matter who's wrong or right <br>
+	</p>
+
+	<p style="font-size:20px; margin-left:190px;">
+		Just beat it (beat it), beat it (beat it) <br>
+		No one wants to be defeated <br>
+		Showin' how funky and strong is your fight <br>
+		It doesn't matter who's wrong or right <br>
+		Just beat it (beat it, beat it, beat it) <br>
+		Beat it, beat it, beat it <br>
+		Beat it, beat it, beat it <br>
+		Beat it, beat it, beat it <br>
+		Beat it, beat it, beat it <br>
+	</p>
+
+	<p style="font-size:20px; margin-left:190px;">
+		Beat it (beat it), beat it (beat it) <br>
+		No one wants to be defeated <br>
+		Showin' how funky and strong is your fight <br>
+		It doesn't matter who's wrong or right (who's right) <br>
+	</p>
+
+	<p style="font-size:20px; margin-left:190px;">
+		Just beat it (beat it), beat it (beat it) <br>
+		No one wants to be defeated (oh, no) <br>
+		Showin' how funky and strong is your fight <br>
+		It doesn't matter who's wrong or right <br>
+	</p>
+
+	<p style="font-size:20px; margin-left:190px;">
+		Just beat it (beat it), beat it (beat it) <br>
+		No one wants to be defeated (oh, Lord) <br>
+		Showin' how funky and strong is your fight <br>
+		It doesn't matter who's wrong or right <br>
+	</p>
+
+	<p style="font-size:20px; margin-left:190px;">
+		Just beat it (beat it), beat it (beat it) <br>
+		No one wants to be defeated (oh, no) <br>
+		Showin' how funky and strong is your fight <br>
+		It doesn't matter who's wrong or right <br>
 	</p>
 </body>
 </html>
