--- a/ex_07_Site-Clone_LetrasCom/index.html
+++ b/ex_07_Site-Clone_LetrasCom/index.html
@@ -16,7 +16,7 @@
 
 	<p style="color: lightgray; font-size:12px ;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;página inicial  >>  pop  >>  michael jackson  >>  beat it</p>
 
-		<a href="https://visitbue.com" target="_blank"><img src="IMG/anuncio.png" alt="anuncio do mal :O" height="90" align="center"></a>
+		<a href="https://visitbue.com" target="_blank" align="center"><img src="IMG/anuncio.png" alt="anuncio do mal :O" height="90" align="center"></a>
 
 	<p style="color: #ed4800; font-size:25px; line-height:-10px; position: relative; top:-20px; margin-left:115px;">
 	<img src="IMG/michael.png" alt="Michael Jackson" style="float: left ; margin-right: 15px; width="56" height="56">
