V12 (Google copia e seletores

--- a/ex_13_Formulario/index.html
+++ b/ex_13_Formulario/index.html
@@ -8,14 +8,20 @@
 <body>
     <header>
         <p><img src="IMG/setas.png" alt="setas" width="110" style="float: left;"></p>
-
         <p><img src="IMG/extras.png" alt="extras" width="70" style="float: right;"></p>
+        <form action="">
+            <input type="text" name="buscador2" style="margin-top: 10px; width:1050px ; ;">
+        </form>
     </header>
+
+    <img src="IMG/pontos.png" alt="" style="float: right; width:20px ; margin-top:25px ;">
+    <a href="https://www.google.com/imghp?hl=pt-BR&tab=ri&ogbl"><img src="IMG/imgens.png" alt="" style="float: right; width:60px ; margin-top:20px ; margin-right:10px ;"></a>
+    <a href="https://www.google.com/intl/pt-BR/gmail/about/"><img src="IMG/gmail.png" alt="" style="float: right; width:55px ; margin-top:20px ;"></a>
 
     <img src="IMG/google.png" alt="google" width="1270">
 
     <center form action="">
-        <input type="text" name="buscador">
+        <input type="text" name="buscador" style="width:450px ;">
         <button>Pesquisar</button>
     </form>
 </body>
